fiexed minor ui issue on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -47,9 +47,9 @@
 }
 
 #root {
-  /* height: 100vh;
-  height: 100dvh; */
-  height: inherit;
+  height: 100vh;
+  height: 100dvh;
+  /* height: inherit; */
   width: 100%;
 }
 
